# mammotion-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  pyproject.toml
data/: area-mapping.json
docs/: 2026-05-14-driver-spec.md  2026-05-14-fix-driver-spec-pause-resume-gating.md  2026-05-15-area-mapping-package-data-driver-spec.md  2026-05-15-v1.1-driver-spec.md  2026-05-15-v1.2-driver-spec.md
mammotion_mcp/: __init__.py  area_resolver.py  ha_client.py  safety.py  server.py
mammotion_mcp/tools/: __init__.py  diag.py  motion.py  mow.py  status.py
tests/: test_area_resolver.py  test_ha_client.py  test_live_mow.py  test_motion_register.py  test_mow_tool.py  test_safety.py
